--- a/projects.html
+++ b/projects.html
@@ -40,13 +40,7 @@
                         <a href="projects.html">Projects</a>
                     </li>
                     <li>
-                        <a href="sideProjects.html">Side Projects</a>
-                    </li>
-                    <li>
                         <a href="publications.html">Publications</a>
-                    </li>
-                    <li>
-                        <a href="resume.html">Resume</a>
                     </li>
                     <li>
                        <a href="contact.html">Contact</a>
@@ -65,7 +59,7 @@
                         <h4>[Machine Learning] DMRpred</h4>
                         <p><b>DMRpred is a high-throughput predictor (Random Forest) of disordered moonlighting regions (DMRs) in proteins.</b> DMRs are disordered, and carry out more than one disorder related functions. DMRpred is a Random Forest model using empirically designed features taking into account sequence conservation information, relative solvent accessibility, intrinsic disorder and function-related amino acid indexes. For each residue in the input sequence, it outputs propensity score and binary prediction of being in a DMR. DMRpred takes less than one minute to predict a protein of typical length (about 500 residues long).</p>
                         <li>Webserver: <a href="http://biomine.cs.vcu.edu/servers/DMRpred/">http://biomine.cs.vcu.edu/servers/DMRpred/</a></li>
-                        <li>Paper: Under review</li>
+                        <li>Paper: <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/prot.25590">Proteins: Structure, Function, and Bioinformatics</a></li>
 
                         <h4>[Application] fDETECT</h4>
                         <p><b>fDETECT is a web server that predicts if a given protein sequence can pass the four steps of the crystallization pipeline</b> - material production, purification, crystallization and diffraction-quality crystallization. It allows users to run fast predictions for large datasets and to run slower but more accurate predictions for small datasets.  This webserver implements the fDETECT method (linear models) (<u>f</u>ast <u>D</u>etermination of <u>E</u>ligibility of <u>T</u>arg<u>E</u>ts for <u>C</u>rys<u>T</u>allization) [Acta Cryst. (2014). D70, 2781-2793] and the PPCpred method (SVM models) (<u>Pred</u>ictor of protein <u>P</u>roduction, <u>P</u>urification and <u>C</u>rystallization) [Bioinformatics. (2011). Volume 27, Issue 13, i24–i331].</p>
