--- a/publications.html
+++ b/publications.html
@@ -40,13 +40,7 @@
                         <a href="projects.html">Projects</a>
                     </li>
                     <li>
-                        <a href="sideProjects.html">Side Projects</a>
-                    </li>
-                    <li>
                         <a href="publications.html">Publications</a>
-                    </li>
-                    <li>
-                        <a href="resume.html">Resume</a>
                     </li>
                     <li>
                        <a href="contact.html">Contact</a>
@@ -62,15 +56,16 @@
                         <div class="col-lg-12">
                             <h1>Publications</h1>
                             <h4>Journal Papers</h4>
-                            <p id="pubs">[1] F. Meng, C. Wang and L. Kurgan, &quot;fDETECT webserver: fast predictor of propensity for protein production, purification, and crystallization&quot;, <i><b>BMC Bioinformatics</b></i>, 18:580, 2017</p>
-                            <p id="pubs">[2] F. Meng, V. N. Uversky and L. Kurgan, &quot;Comprehensive Review of Methods for Prediction of Intrinsic Disorder and its Molecular Functions&quot;, <i><b>Cellular and Molecular Life Sciences</b></i>, 74(17):3069-3090, 2017</p>
-                            <p id="pubs">[3] I. Na, F. Meng, L. Kurgan, and V. N. Uversky, &quot;Autophagy-related intrinsically disordered proteins in intra-nuclear compartments&quot;<i>, <b>Molecular BioSystems</b></i>, vol. 12, pp. 2798-2817, 2016.</p>
-                            <p id="pubs">[4] F. Meng and L. Kurgan, &quot;DFLpred: High-throughput prediction of disordered flexible linker regions in protein sequences&quot;, <i><b>Bioinformatics</b></i>, vol. 32, pp. i341-i350, 2016.</p>
-                            <p id="pubs">[5] F. Meng, I. Na, L. Kurgan, and V. N. Uversky, &quot;Compartmentalization and Functionality of Nuclear Disorder: Intrinsic Disorder and Protein-Protein Interactions in Intra-Nuclear Compartments&quot;, <i><b>International Journal of Molecular Sciences</b></i>, vol. 17, p. 24, 2015.</p>
-                            <p id="pubs">[6] F. Meng, R. A. Badierah, H. A. Almehdar, E. M. Redwan, L. Kurgan, and V. N. Uversky, &quot;Unstructural biology of the dengue virus proteins&quot;, <i><b>FEBS Journal</b></i>, vol. 282, pp. 3368-3394, 2015.</p>
-                            <p id="pubs">[7] F. Meng, C. Cai, and H. Yan, &quot;A Bicluster-Based Bayesian Principal Component Analysis Method for Microarray Missing Value Estimation&quot;, <i><b>IEEE Journal of Biomedical and Health Informatics</b></i>, vol. 18, pp. 863-871, 2014.</p>
-                            <p id="pubs">[8] F. Meng and C. Cai, &quot;Microarray missing value estimation by local Bayesian principal component analysis&quot;, <i><b>ICIC Express Letters</b></i>, vol. 7, pp. 535-9, 2013.</p>
-                            <p id="pubs">[9] C. Cai and F. Meng, &quot;Gene missing value imputation by matrix completion and local least square&quot;, <i><b>ICIC Express Letters</b></i>, vol. 6, pp. 1229-1234, 2012.</p>
+                            <p id="pubs">[1] F. Meng and L. Kurgan, &quot;High-throughput Prediction of Disordered Moonlighting Regions in Protein Sequences&quot;, <i><b>Proteins: Structure, Function, and Bioinformatics</b></i>, doi:10.1002/prot.25590, 2018</p>
+                            <p id="pubs">[2] F. Meng, C. Wang and L. Kurgan, &quot;fDETECT webserver: fast predictor of propensity for protein production, purification, and crystallization&quot;, <i><b>BMC Bioinformatics</b></i>, 18:580, 2017</p>
+                            <p id="pubs">[3] F. Meng, V. N. Uversky and L. Kurgan, &quot;Comprehensive Review of Methods for Prediction of Intrinsic Disorder and its Molecular Functions&quot;, <i><b>Cellular and Molecular Life Sciences</b></i>, 74(17):3069-3090, 2017</p>
+                            <p id="pubs">[4] I. Na, F. Meng, L. Kurgan, and V. N. Uversky, &quot;Autophagy-related intrinsically disordered proteins in intra-nuclear compartments&quot;<i>, <b>Molecular BioSystems</b></i>, vol. 12, pp. 2798-2817, 2016.</p>
+                            <p id="pubs">[5] F. Meng and L. Kurgan, &quot;DFLpred: High-throughput prediction of disordered flexible linker regions in protein sequences&quot;, <i><b>Bioinformatics</b></i>, vol. 32, pp. i341-i350, 2016.</p>
+                            <p id="pubs">[6] F. Meng, I. Na, L. Kurgan, and V. N. Uversky, &quot;Compartmentalization and Functionality of Nuclear Disorder: Intrinsic Disorder and Protein-Protein Interactions in Intra-Nuclear Compartments&quot;, <i><b>International Journal of Molecular Sciences</b></i>, vol. 17, p. 24, 2015.</p>
+                            <p id="pubs">[7] F. Meng, R. A. Badierah, H. A. Almehdar, E. M. Redwan, L. Kurgan, and V. N. Uversky, &quot;Unstructural biology of the dengue virus proteins&quot;, <i><b>FEBS Journal</b></i>, vol. 282, pp. 3368-3394, 2015.</p>
+                            <p id="pubs">[8] F. Meng, C. Cai, and H. Yan, &quot;A Bicluster-Based Bayesian Principal Component Analysis Method for Microarray Missing Value Estimation&quot;, <i><b>IEEE Journal of Biomedical and Health Informatics</b></i>, vol. 18, pp. 863-871, 2014.</p>
+                            <p id="pubs">[9] F. Meng and C. Cai, &quot;Microarray missing value estimation by local Bayesian principal component analysis&quot;, <i><b>ICIC Express Letters</b></i>, vol. 7, pp. 535-9, 2013.</p>
+                            <p id="pubs">[10] C. Cai and F. Meng, &quot;Gene missing value imputation by matrix completion and local least square&quot;, <i><b>ICIC Express Letters</b></i>, vol. 6, pp. 1229-1234, 2012.</p>
                             <h4>Book Chapters</h4>
                             <p id="pubs">[1] F. Meng V. N. Uversky and L. Kurgan, &quot;Computational Prediction of Intrinsic Disorder in Proteins&quot;, in <i><b>Current Protocols in Protein Science</b></i>, 88:2.16.1–2.16.14, Wiley, (ISBN 978-0-4711-4086-3), 2017</p>
                             <p id="pubs">[2] F. Meng and L. Kurgan, &quot;Computational Prediction of Protein Secondary Structure from Sequence&quot;, in <i><b>Current Protocols in Protein Science</b></i>, 86:2.3.1-2.3.10, Wiley (ISBN 978-0-4711-4086-3), 2016</p>
