--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="dist/simple-sidebar.min.css" rel="stylesheet">
 
 </head>
 
