--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Simple Sidebar - Start Bootstrap Template</title>
+  <title>Communication and Information Theory Lab</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -24,14 +24,14 @@
 
     <!-- Sidebar -->
     <div class="bg-light border-right" id="sidebar-wrapper">
-      <div class="sidebar-heading">Start Bootstrap </div>
+      <div class="sidebar-heading">CIT Lab</div>
       <div class="list-group list-group-flush">
-        <a href="#" class="list-group-item list-group-item-action bg-light">Dashboard</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Shortcuts</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Events</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Home</a>
+        <a href="faculty.html" class="list-group-item list-group-item-action bg-light">Faculty</a>
+        <a href="students.html" class="list-group-item list-group-item-action bg-light">Phd Students</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Events/Talks</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Contact</a>
+		<a href="http://www.inc.cuhk.edu.hk/" class="list-group-item list-group-item-action bg-light">Institute of Network Coding</a>
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
@@ -39,40 +39,15 @@
     <!-- Page Content -->
     <div id="page-content-wrapper">
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-        <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </nav>
-
       <div class="container-fluid">
-        <h1 class="mt-4">Simple Sidebar</h1>
-        <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will change.</p>
-        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>. The top navbar is optional, and just for demonstration. Just create an element with the <code>#menu-toggle</code> ID which will toggle the menu when clicked.</p>
+        <h1 class="mt-4">Communication and Information Theory Lab</h1>
+		<h2 class="mt-4"> <a href="http://www.ie.cuhk.edu.hk/main/index.shtml">Department of Information Engineering</a>, 
+		                  <a href="http://www.cuhk.edu.hk/english/index.html">The Chinese University of Hong Kong</a></h2>
+		
+        <p>Our department hosts a world-class research group in Communications and Information Theory and is the birth-place of the field of Network Coding.</p>
+        <p>The research area of our group covers a wide range of topics in information theory, channel coding theory, switching theory, and performance analysis. 
+		   Our research deals with the fundamental aspects of information and uses mathematical tools to obtain the limits of data compression, channel coding, network performance, etc. 
+		   We also design efficient algorithms for related applications.</p>
       </div>
     </div>
     <!-- /#page-content-wrapper -->
@@ -92,6 +67,18 @@
     });
   </script>
 
+
+</td></tr></table>
+<div id="footer">
+<div id="footer-text">
+Page generated 2019-09-28 00:46:34 HKT, by <a href="#">cwling</a>.
+</div>
+</div>
+</td>
+</tr>
+</table>
+
 </body>
+
 
 </html>
